[gd_scene load_steps=36 format=2]

[ext_resource path="res://Scenes/Singletons/GlobalAudio/global_audio.gd" type="Script" id=1]
[ext_resource path="res://Sounds/ui_swish.ogg" type="AudioStream" id=2]
[ext_resource path="res://Sounds/backpack_open.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sounds/backpack_close.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sounds/guitar_in.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sounds/guitar_out.ogg" type="AudioStream" id=6]
[ext_resource path="res://Sounds/button_down.ogg" type="AudioStream" id=7]
[ext_resource path="res://Sounds/button_up.ogg" type="AudioStream" id=8]
[ext_resource path="res://Sounds/store_bell.ogg" type="AudioStream" id=9]
[ext_resource path="res://Sounds/Music/webfishing_music1_draft2b_title_loop.ogg" type="AudioStream" id=10]
[ext_resource path="res://Sounds/jingle_lose.ogg" type="AudioStream" id=11]
[ext_resource path="res://Sounds/jingle_win.ogg" type="AudioStream" id=12]
[ext_resource path="res://Sounds/lotto_win.ogg" type="AudioStream" id=13]
[ext_resource path="res://Sounds/menu_blip.ogg" type="AudioStream" id=14]
[ext_resource path="res://Sounds/tb_close.ogg" type="AudioStream" id=15]
[ext_resource path="res://Sounds/tb_open.ogg" type="AudioStream" id=16]
[ext_resource path="res://Sounds/tb_rustle.ogg" type="AudioStream" id=17]
[ext_resource path="res://Sounds/equip_cos.ogg" type="AudioStream" id=18]
[ext_resource path="res://Sounds/Music/webfishing_music2_draft4_dinky.ogg" type="AudioStream" id=19]
[ext_resource path="res://Sounds/Music/webfishing_music3_draft3_somber.ogg" type="AudioStream" id=20]
[ext_resource path="res://Sounds/Fishing/minigame_win.ogg" type="AudioStream" id=21]
[ext_resource path="res://Sounds/Music/webfishing_music1_draft2b_title.ogg" type="AudioStream" id=22]
[ext_resource path="res://Sounds/lose_short.ogg" type="AudioStream" id=23]
[ext_resource path="res://Sounds/label_open.ogg" type="AudioStream" id=24]
[ext_resource path="res://Sounds/labler_end.ogg" type="AudioStream" id=25]
[ext_resource path="res://Sounds/Music/floombo_FuibiMastered.ogg" type="AudioStream" id=26]
[ext_resource path="res://Sounds/Music/floombo_PeinosMastered.ogg" type="AudioStream" id=27]
[ext_resource path="res://Sounds/Music/floombo_BuyABoxingGlove.mp3" type="AudioStream" id=28]
[ext_resource path="res://Sounds/Music/floombo_Together.ogg" type="AudioStream" id=29]

[sub_resource type="AudioStreamRandomPitch" id=1]
audio_stream = ExtResource( 2 )
random_pitch = 1.02

[sub_resource type="AudioStreamRandomPitch" id=2]
audio_stream = ExtResource( 3 )

[sub_resource type="AudioStreamRandomPitch" id=3]
audio_stream = ExtResource( 4 )

[sub_resource type="AudioStreamRandomPitch" id=4]
audio_stream = ExtResource( 9 )
random_pitch = 1.2

[sub_resource type="AudioStreamRandomPitch" id=5]
audio_stream = ExtResource( 17 )
random_pitch = 1.2

[sub_resource type="AudioStreamRandomPitch" id=6]
audio_stream = ExtResource( 18 )
random_pitch = 1.15

[node name="global_audio" type="Node"]
script = ExtResource( 1 )

[node name="swish" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
volume_db = -8.0
bus = "SFX"

[node name="backpack_open" type="AudioStreamPlayer" parent="."]
stream = SubResource( 2 )
volume_db = -8.0
bus = "SFX"

[node name="backpack_close" type="AudioStreamPlayer" parent="."]
stream = SubResource( 3 )
volume_db = -8.0
bus = "SFX"

[node name="guitar_out" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -8.0
bus = "FadeBypass"

[node name="guitar_in" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -8.0
bus = "FadeBypass"

[node name="button_down" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -8.0
bus = "SFX"

[node name="button_up" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -8.0
bus = "SFX"

[node name="shop_enter" type="AudioStreamPlayer" parent="."]
stream = SubResource( 4 )
volume_db = -16.0
bus = "SFX"

[node name="shop_exit" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="music1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -8.0
bus = "Music"

[node name="music1_loop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -8.0
bus = "Music"

[node name="music2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = -7.0
bus = "Music"

[node name="music3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = 2.0
bus = "Music"

[node name="floombo_fuibi" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
volume_db = -16.0
bus = "Music"

[node name="floombo_peinos" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )
volume_db = -16.0
bus = "Music"

[node name="floombo_together" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 29 )
volume_db = -16.0
bus = "Music"

[node name="floombo_boxingglove" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 28 )
volume_db = -16.0
bus = "Music"

[node name="jingle_win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -8.0
bus = "SFX"

[node name="quest_win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -8.0
bus = "SFX"

[node name="jingle_lose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -8.0
bus = "SFX"

[node name="short_win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -8.0
bus = "SFX"

[node name="short_lose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = -8.0
bus = "SFX"

[node name="ui_open" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -8.0
bus = "SFX"

[node name="tb_open" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -4.0
bus = "SFX"

[node name="tb_close" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -4.0
bus = "SFX"

[node name="tb_rustle" type="AudioStreamPlayer" parent="."]
stream = SubResource( 5 )
volume_db = -4.0
bus = "SFX"

[node name="equip_cos" type="AudioStreamPlayer" parent="."]
stream = SubResource( 6 )
volume_db = -4.0
bus = "SFX"

[node name="labeler_open" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
volume_db = -8.0
bus = "SFX"

[node name="labeler_close" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
volume_db = -8.0
bus = "SFX"
